# gradient-LUT-test

./: Cargo.toml
src/: color.rs  lib.rs  new_gradient.rs  old_gradient.rs  utils.rs
src/benches/: new_gradient.rs  og_gradient.rs
