[package]
name = "gradient_lut"
version = "0.1.0"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.5.0"
itertools = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "original_gradient"
path = "src/benches/og_gradient.rs"
harness = false

[[bench]]
name = "new_gradient"
path = "src/benches/new_gradient.rs"
harness = false